force-app/main/default/objects/Product_Performance__c/Product_Performance__c.object-meta.xml
<CustomObject>
    <description>Store Product Performance retrieve from DWH</description>
    <label>Product Performance</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Product Performance No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>