force-app/main/default/objects/Product_Performance__c/fields/As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Of_Date__c</fullName>
    <description>As of Date (Monthly)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>