force-app/main/default/objects/Product_Performance__c/fields/Average_OS_YTD__c.field-meta.xml
<CustomField>
    <fullName>Average_OS_YTD__c</fullName>
    <label>Average (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>