force-app/main/default/objects/Product_Performance__c/fields/NIIC_YTD__c.field-meta.xml
<CustomField>
    <fullName>NIIC_YTD__c</fullName>
    <label>NIIC (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>