force-app/main/default/objects/Product_Performance__c/fields/NIID_DPA_MTD__c.field-meta.xml
<CustomField>
    <fullName>NIID_DPA_MTD__c</fullName>
    <label>NIID-DPA (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>