force-app/main/default/objects/Product_Performance__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product Code in level 7</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>