force-app/main/default/objects/Product_Performance__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Product Description in level 7</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>