force-app/main/default/objects/Product_Performance__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Using this group to determine Loan/Liability</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>