force-app/main/default/objects/Product_Performance__c/fields/Product_Hierachy_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierachy_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Hierachy Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Performance</relationshipLabel>
    <relationshipName>Product_Performance</relationshipName>
    <type>Lookup</type>
</CustomField>