force-app/main/default/objects/Product_Performance__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product Name as per Performance Report</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Performance Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>