force-app/main/default/objects/Product_Performance__c/fields/Product_Perf_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Perf_External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Key for Product Performance 
(Customer SFID + ProdKey + TMB Account ID + TMB Suffix + TMB Ref )</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product Perf. External Key</label>
    <length>154</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>