force-app/main/default/objects/Product_Performance__c/fields/R_NIID_DPA_MTD__c.field-meta.xml
<CustomField>
    <fullName>R_NIID_DPA_MTD__c</fullName>
    <formula>NIID_DPA_MTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIID-DPA (MTD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>