force-app/main/default/objects/Product_Performance__c/fields/R_Outstanding_YTD__c.field-meta.xml
<CustomField>
    <fullName>R_Outstanding_YTD__c</fullName>
    <description>Outstanding YTD for Reporting (No decimal place)</description>
    <formula>Ending_OS_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding (YTD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>