force-app/main/default/objects/Product_Performance__c/fields/TMB_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Account_ID__c</fullName>
    <description>Account number of product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>