force-app/main/default/objects/Product_Performance__c/fields/TMB_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TMB_Account_Name__c</fullName>
    <description>Account name of product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>