force-app/main/default/objects/Product_Performance__c/fields/Transaction_MTD__c.field-meta.xml
<CustomField>
    <fullName>Transaction_MTD__c</fullName>
    <label>Transaction (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>