force-app/main/default/objects/Product_Performance__c/fields/Transaction_YTD__c.field-meta.xml
<CustomField>
    <fullName>Transaction_YTD__c</fullName>
    <label>Transaction (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>