force-app/main/default/objects/Product_Performance__c/fields/Volume_YTD__c.field-meta.xml
<CustomField>
    <fullName>Volume_YTD__c</fullName>
    <label>Volume (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>