force-app/main/default/objects/Product_Performance__c/validationRules/Check_ProductHierarchyCode_notNULL_PPerf.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_ProductHierarchyCode_notNULL_PPerf</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product_Hierachy_Code__c )</errorConditionFormula>
    <errorMessage>Product_Hierachy_Code__c cannot be blank</errorMessage>
</ValidationRule>